<resources>
    <string name="app_name">BottomSheetDemo</string>

    <!-- button text -->
    <string name="button_text_show_bottom_sheet">Show bottom sheet</string>
    <string name="button_text_collapse_bottom_sheet">Collapse bottom sheet</string>
    <string name="button_text_hide_bottom_sheet">Hide bottom sheet</string>
    <string name="button_text_show_bottom_sheet_dialog">Show bottom sheet dialog</string>

    <!-- bottom sheet behavior -->
    <string name="string_bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>

    <string name="text_pull_to_show_more">pull to show more content</string>
    <string name="text_showing_sheet_content">Bottom sheet content</string>
    <string name="text_click_me">Click me</string>

    <string name="text_more_contet_to_user">
        We can show the user more content here. Add more UI widgets, texts etc.
    </string>

    <string name="text_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
</resources>
