<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mayojava.sample.bottomsheetdemo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/button_show_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_show_bottom_sheet"
            style="@style/ButtonStyle"
            android:elevation="@dimen/z_button"/>

        <Button
            android:id="@+id/button_collapse_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_show_bottom_sheet"
            android:text="@string/button_text_collapse_bottom_sheet"
            style="@style/ButtonStyle"
            android:elevation="@dimen/z_button"/>

        <Button
            android:id="@+id/button_hide_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_collapse_bottom_sheet"
            android:text="@string/button_text_hide_bottom_sheet"
            style="@style/ButtonStyle"
            android:elevation="@dimen/z_button"/>

        <Button
            android:id="@+id/button_show_bottom_sheet_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_hide_bottom_sheet"
            android:text="@string/button_text_show_bottom_sheet_dialog"
            style="@style/ButtonStyle"
            android:elevation="@dimen/z_button"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linear_layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:behavior_peekHeight="80dp"
        app:behavior_hideable="true"
        app:layout_behavior="@string/string_bottom_sheet_behavior"
        android:elevation="@dimen/z_bottom_sheet"
        android:background="@color/color_bottom_sheet">
        <TextView
            android:id="@+id/text_view_sheet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pull_to_show_more"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/activity_vertical_margin"/>

        <Button
            android:text="@string/text_click_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_view_sheet_title"/>

        <Button
            android:text="@string/text_click_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_view_sheet_title"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
